<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layoutToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/lightGreen"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_menu"
            app:tint="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/menu_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorBackground"
        android:backgroundTint="@color/lightGreen"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageButton
        android:id="@+id/flexButton"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginBottom="5sp"
        android:contentDescription="@string/flex_tab_button"
        android:gravity="center"
        android:src="@drawable/ic_flex"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintEnd_toStartOf="@+id/poolButton"/>

    <ImageButton
        android:id="@+id/poolButton"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginBottom="5sp"
        android:contentDescription="@string/pool_tab_button"
        android:gravity="center"
        android:src="@drawable/ic_pool"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/flexButton"
        app:layout_constraintEnd_toStartOf="@+id/comboButton"/>

    <ImageButton
        android:id="@+id/comboButton"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginBottom="5sp"
        android:contentDescription="@string/combo_tab_button"
        android:gravity="center"
        android:src="@drawable/ic_combo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/poolButton" />

    <View
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutToolbar"
        tools:ignore="MissingConstraints" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorBackground"
        app:layout_constraintTop_toBottomOf="@id/layoutToolbar"/>


    <Button
        android:id="@+id/btnFlexActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="Flex Priser"
        android:textColor="#FFF"
        android:background="#397bb2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutToolbar"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnComboActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="Combo Priser"
        android:textColor="#FFF"
        android:background="#397bb2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnFlexActivity"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnPoolActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="Pulje Priser"
        android:textColor="#FFF"
        android:background="#397bb2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnComboActivity"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>