<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ComboActivity">

    <LinearLayout
        android:id="@+id/layoutToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/lightGreen"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_menu"
            app:tint="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-32dp"
            android:layout_weight="1"
            android:text="@string/combo_title"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorBackground"
        android:backgroundTint="@color/lightGreen"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageButton
        android:id="@+id/flexButton"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginBottom="5sp"
        android:contentDescription="@string/flex_tab_button"
        android:gravity="center"
        android:src="@drawable/ic_flex"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintEnd_toStartOf="@+id/poolButton"/>

    <ImageButton
        android:id="@+id/poolButton"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginBottom="5sp"
        android:contentDescription="@string/pool_tab_button"
        android:gravity="center"
        android:src="@drawable/ic_pool"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/flexButton"
        app:layout_constraintEnd_toStartOf="@+id/comboButton"/>

    <ImageButton
        android:id="@+id/comboButton"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginBottom="5sp"
        android:contentDescription="@string/combo_tab_button"
        android:gravity="center"
        android:src="@drawable/ic_combo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/poolButton" />

    <View
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutToolbar"
        tools:ignore="MissingConstraints" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorBackground"
        app:layout_constraintTop_toBottomOf="@id/layoutToolbar"
        app:layout_constraintBottom_toTopOf="@+id/viewDivider"/>

    <TextView
        android:id="@+id/titleWestPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/price_west"
        android:textAllCaps="true"
        android:textColor="@color/darkGreen"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/titleEastPrice"
        app:layout_constraintTop_toBottomOf="@id/layoutToolbar" />

    <TextView
        android:id="@+id/titleEastPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/price_east"
        android:textAllCaps="true"
        android:textColor="@color/darkGreen"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/titleWestPrice"
        app:layout_constraintTop_toBottomOf="@id/layoutToolbar" />

    <TextView
        android:id="@+id/price_west"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/combo_price_west_res"
        android:textColor="@color/darkGreen"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/titleWestPrice"
        app:layout_constraintStart_toStartOf="@id/titleWestPrice"
        app:layout_constraintTop_toBottomOf="@id/titleWestPrice" />

    <TextView
        android:id="@+id/price_east"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/combo_price_east_res"
        android:textColor="@color/darkGreen"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/titleEastPrice"
        app:layout_constraintStart_toStartOf="@id/titleEastPrice"
        app:layout_constraintTop_toBottomOf="@id/titleEastPrice" />

    <View
        android:id="@+id/viewDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorDivider"
        app:layout_constraintTop_toBottomOf="@+id/price_west"/>

    <TextView
        android:id="@+id/oldDatePrice0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/temp_oldDate"
        android:textAllCaps="true"
        android:textColor="@color/darkGreen"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewDivider" />

    <TextView
        android:id="@+id/oldWestPrice0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/temp_oldPrice"
        android:textAllCaps="true"
        android:textColor="@color/darkGreen"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/oldEastPrice0"
        app:layout_constraintTop_toBottomOf="@id/oldDatePrice0" />

    <TextView
        android:id="@+id/oldEastPrice0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/temp_oldPrice"
        android:textAllCaps="true"
        android:textColor="@color/darkGreen"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/oldWestPrice0"
        app:layout_constraintTop_toBottomOf="@id/oldDatePrice0" />

    <TextView
        android:id="@+id/oldDatePrice1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/temp_oldDate"
        android:textAllCaps="true"
        android:textColor="@color/darkGreen"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oldWestPrice0" />

    <TextView
        android:id="@+id/oldWestPrice1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/temp_oldPrice"
        android:textAllCaps="true"
        android:textColor="@color/darkGreen"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/oldWestPrice0"
        app:layout_constraintStart_toStartOf="@id/oldWestPrice0"
        app:layout_constraintTop_toBottomOf="@id/oldDatePrice1" />

    <TextView
        android:id="@+id/oldEastPrice1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/temp_oldPrice"
        android:textAllCaps="true"
        android:textColor="@color/darkGreen"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/oldEastPrice0"
        app:layout_constraintStart_toStartOf="@id/oldEastPrice0"
        app:layout_constraintTop_toBottomOf="@id/oldDatePrice1" />

    <TextView
        android:id="@+id/oldDatePrice2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/temp_oldDate"
        android:textAllCaps="true"
        android:textColor="@color/darkGreen"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oldWestPrice1" />

    <TextView
        android:id="@+id/oldWestPrice2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/temp_oldPrice"
        android:textAllCaps="true"
        android:textColor="@color/darkGreen"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/oldWestPrice1"
        app:layout_constraintStart_toStartOf="@id/oldWestPrice1"
        app:layout_constraintTop_toBottomOf="@id/oldDatePrice2" />

    <TextView
        android:id="@+id/oldEastPrice2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/temp_oldPrice"
        android:textAllCaps="true"
        android:textColor="@color/darkGreen"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/oldEastPrice1"
        app:layout_constraintStart_toStartOf="@id/oldEastPrice1"
        app:layout_constraintTop_toBottomOf="@id/oldDatePrice2" />

    <TextView
        android:id="@+id/oldDatePrice3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/temp_oldDate"
        android:textAllCaps="true"
        android:textColor="@color/darkGreen"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oldWestPrice2" />

    <TextView
        android:id="@+id/oldWestPrice3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/temp_oldPrice"
        android:textAllCaps="true"
        android:textColor="@color/darkGreen"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/oldWestPrice2"
        app:layout_constraintStart_toStartOf="@id/oldWestPrice2"
        app:layout_constraintTop_toBottomOf="@id/oldDatePrice3" />

    <TextView
        android:id="@+id/oldEastPrice3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/temp_oldPrice"
        android:textAllCaps="true"
        android:textColor="@color/darkGreen"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/oldEastPrice2"
        app:layout_constraintStart_toStartOf="@id/oldEastPrice2"
        app:layout_constraintTop_toBottomOf="@id/oldDatePrice3" />

    <TextView
        android:id="@+id/oldDatePrice4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/temp_oldDate"
        android:textAllCaps="true"
        android:textColor="@color/darkGreen"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oldWestPrice3" />

    <TextView
        android:id="@+id/oldWestPrice4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/temp_oldPrice"
        android:textAllCaps="true"
        android:textColor="@color/darkGreen"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/oldWestPrice3"
        app:layout_constraintStart_toStartOf="@id/oldWestPrice3"
        app:layout_constraintTop_toBottomOf="@id/oldDatePrice4" />

    <TextView
        android:id="@+id/oldEastPrice4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/temp_oldPrice"
        android:textAllCaps="true"
        android:textColor="@color/darkGreen"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/oldEastPrice3"
        app:layout_constraintStart_toStartOf="@id/oldEastPrice3"
        app:layout_constraintTop_toBottomOf="@id/oldDatePrice4" />

</androidx.constraintlayout.widget.ConstraintLayout>
